   the HTML body did, leading to the head contents incorrectly being parsed into the body. Changed the behavior so that
   when the UTF-8 BOM is detected, it will take precedence for determining the charset to decode with.
   <https://github.com/jhy/jsoup/issues/348>

 * Relaxed doctype validation, allowing doctypes to not specify a name.
   <https://github.com/jhy/jsoup/issues/460>

*** Release 1.7.3 [2013-Nov-10]
 * Introduced FormElement, providing easy access to form controls and their data, and the ability to submit forms
   with Jsoup.Connect.

 * Reduced GC impact during HTML parsing, with 17% fewer objects created, and 3% faster parses.

 * Reduced CSS selection time by 26% for common queries.

 * Improved HTTP character set detection.
   <https://github.com/jhy/jsoup/pull/325> <https://github.com/jhy/jsoup/issues/321>

 * Added Document.location, to get the URL the document was retrieved from. Helpful if connection was redirected.
   <https://github.com/jhy/jsoup/pull/306>

 * Fixed support for self-closing script tags.
   <https://github.com/jhy/jsoup/issues/305>

 * Fixed a crash when reading an unterminated CDATA section.
   <https://github.com/jhy/jsoup/issues/349>

 * Fixed an issue where elements added via the adoption agency algorithm did not preserve their attributes.
   <https://github.com/jhy/jsoup/issues/313>

 * Fixed an issue when cloning a document with extremely nested elements that could cause a stack-overflow.
   <https://github.com/jhy/jsoup/issues/290>

 * Fixed an issue when connecting or redirecting to a URL that contains a space.
   <https://github.com/jhy/jsoup/pull/354> <https://github.com/jhy/jsoup/issues/114>

*** Release 1.7.2 [2013-Jan-27]
 * Added support for supplementary characters outside of the Basic Multilingual Plane.
   <https://github.com/jhy/jsoup/issues/288> <https://github.com/jhy/jsoup/pull/289>

 * Added support for structural pseudo CSS selectors, including :first-child, :last-child, :nth-child, :nth-last-child,